refactor(security): consolidate backend RBAC foundation